force-app/main/default/objects/DaScoopComposer__DaScoop_Snippet__c/DaScoopComposer__DaScoop_Snippet__c.object-meta.xml
<CustomObject>
    <label>Groove View</label>
    <nameField>
        <label>Groove View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groove Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>