force-app/main/default/objects/DaScoopComposer__DaScoop_Snippet__c/fields/DaScoopComposer__Active__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>indicates whether this view is to be displayed in GMail or not. This is useful if you want to want to temporarily disable a snippet.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>