force-app/main/default/objects/DaScoopComposer__DaScoop_Snippet__c/fields/DaScoopComposer__Description__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Description__c</fullName>
    <inlineHelpText>This field contains a description of this Groove View for documentation purposes (accessible to admins only).</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>