force-app/main/default/objects/DaScoopComposer__DaScoop_Snippet__c/fields/DaScoopComposer__Profile_Specific_Results__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Profile_Specific_Results__c</fullName>
    <inlineHelpText>indicates whether this view shall simply be displayed to all users or only if a user is assigned to a certain profile. You can specify a list of profiles that shall be excluded or included.</inlineHelpText>
    <label>Profile Specific Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All profiles get to see this snippet</fullName>
                <default>true</default>
                <label>All profiles get to see this snippet</label>
            </value>
            <value>
                <fullName>Only display this snippet to the profiles below.</fullName>
            </value>
            <value>
                <fullName>Do not display this snippet to the profiles below.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>