force-app/main/default/objects/DaScoopComposer__DaScoop_Snippet__c/fields/DaScoopComposer__Query__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Query__c</fullName>
    <inlineHelpText>contains the SOQL query to be executed for this view. The query must not contain aggregate functions. Also HAVING and GROUP BY are not allowed.</inlineHelpText>
    <label>Query</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>