force-app/main/default/objects/DaScoopComposer__DaScoop_Snippet__c/fields/DaScoopComposer__Related_To_Logging__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Related_To_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this snippet will be used for Related To logging or not. Enable this view to use this query for logging.</description>
    <inlineHelpText>Indicates whether this snippet will be used for Related To logging or not. Enable this view to use this query for logging.</inlineHelpText>
    <label>Related-To Logging</label>
    <type>Checkbox</type>
</CustomField>