force-app/main/default/objects/DaScoopComposer__DaScoop_Snippet__c/fields/DaScoopComposer__Sfdc_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Sfdc_Base_Url__c</fullName>
    <inlineHelpText>This is a system field with no relevance for the user.</inlineHelpText>
    <label>Sfdc_Base_Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>