force-app/main/default/objects/DaScoopComposer__DaScoop_Snippet__c/fields/DaScoopComposer__Test_the_Scoop_Composer__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Test_the_Scoop_Composer__c</fullName>
    <formula>HYPERLINK(&apos;/apex/DaScoopComposer__DaScoopComposerTestApp&apos;,
  &apos;Click Here&apos;,
  &apos;_blank&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test your Groove Views</label>
    <type>Text</type>
</CustomField>