force-app/main/default/objects/DaScoopComposer__DaScoop_Snippet__c/listViews/DaScoopComposer__All.listView-meta.xml
<ListView>
    <fullName>DaScoopComposer__All</fullName>
    <columns>DaScoopComposer__Active__c</columns>
    <columns>DaScoopComposer__View_Order__c</columns>
    <columns>NAME</columns>
    <columns>DaScoopComposer__Query__c</columns>
    <columns>DaScoopComposer__Profile_Specific_Results__c</columns>
    <columns>DaScoopComposer__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Groove Views</label>
    <language>en_US</language>
</ListView>